
  * Add patch from upstream to switch back to HDMI when port is back.
    (Closes: #816963)
  * Bump standards-version (no changes needed)
  * Use canonical Vcs-* urls
    - Use cgit url for browser
    - Use https url for git
  * Drop XS-Testsuite header.
    - Newer dpkg-dev adds the field automatically
    - Add versioned Build-Depends for such a version (1.17.14)

 -- Felipe Sateler <fsateler@debian.org>  Sat, 02 Apr 2016 19:29:18 -0300

pulseaudio (8.0-1) unstable; urgency=medium

  [ Luke Yelavich ]
  * New upstream release
  * Update shlibs file

  [ Felipe Sateler ]
  * Release to unstable

 -- Felipe Sateler <fsateler@debian.org>  Wed, 27 Jan 2016 20:44:59 -0300

pulseaudio (7.99.2-1) experimental; urgency=medium

  * New upstream release candidate
  * Drop build-sys-Fix-install-order-of-libpulsecore.patch, applied
    upstream

 -- Felipe Sateler <fsateler@debian.org>  Fri, 15 Jan 2016 18:21:14 -0300

pulseaudio (7.99.1-1) experimental; urgency=medium

  * New upstream release candidate
    - Update local shlibs file for 7.99
    - libpulsecore is now installed in the package-private directory
    - Update symbols file to add new balance functions
  * Drop pulsecore related lintian overrides
  * Drop stale pulseaudio-dev.install file
  * Drop stale lintian overrides
  * Add patch to fix install order of libpulsecore

 -- Felipe Sateler <fsateler@debian.org>  Mon, 28 Dec 2015 17:34:22 -0300

pulseaudio (7.1-2) unstable; urgency=medium

  * Add build-depends on libsoxr-dev to enable soxr resamplers.
     Closes: #804212

 -- Felipe Sateler <fsateler@debian.org>  Fri, 06 Nov 2015 17:15:54 -0300

pulseaudio (7.1-1) unstable; urgency=medium

  * New upstream version
  * Update shlibs file for 7.1
  * Silence lintian warning about pulsecore: it is internal library

 -- Felipe Sateler <fsateler@debian.org>  Sun, 01 Nov 2015 16:27:53 -0300

pulseaudio (7.0-1) unstable; urgency=medium

  [ Luke Yelavich ]
  * New upstream release