@@ -11,13 +11,6 @@ export AUTOPOINT=intltoolize --automake --copy
 export XDG_RUNTIME_DIR = $(CURDIR)/debian/tmp/tmp/xdgruntimedir
 export CK_TIMEOUT_MULTIPLIER = 0
 
-#Don't build all the modules packages when bootstrapping
-ifeq ($(words $(sort $(filter stage1,$(DEB_BUILD_PROFILES)))),1)
-  $(warning Bootstrap profile build)
-  export DH_OPTIONS += -Npulseaudio-module-bluetooth -Npulseaudio-module-bluetooth-dbg
-  DEB_CONFIGURE_EXTRA_FLAGS += --disable-bluez
-endif
-
 common-install-arch::
 	find $(DEB_DESTDIR) -name "*.la" -delete
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/alsa/alsa.conf.d
@@ -41,7 +34,7 @@ DEB_CONFIGURE_EXTRA_FLAGS = --enable-x11 --disable-hal-compat \
 
 
 ifeq ($(words $(sort $(filter stage1,$(DEB_BUILD_PROFILES)))),1)
-  DEB_CONFIGURE_EXTRA_FLAGS += --disable-bluez
+  DEB_CONFIGURE_EXTRA_FLAGS += --disable-bluez5
 endif
 
 
