@@ -9,6 +9,12 @@ pulseaudio (8.0-2) UNRELEASED; urgency=medium
   * Drop XS-Testsuite header.
     - Newer dpkg-dev adds the field automatically
     - Add versioned Build-Depends for such a version (1.17.14)
+  * Fix Build-Profile stage1 support
+    - Mark libbluetooth-dev dependency as <!stage1>
+    - Mark pulseaudio-module-bluetooth as <!stage1>
+    - Build-depend on new enough debhelper (9.20141010)
+    - Use correct flag --disable-bluez5
+    - Drop manual ignoring of bluetooth packages, debhelper knows to do so
 
  -- Felipe Sateler <fsateler@debian.org>  Sat, 02 Apr 2016 19:29:18 -0300
 
